# KEEP

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Plans.md  README.md  THREAT.md  TODO.md  harness.toml  pyproject.toml
hooks/: hooks.json  pre-tool.sh
src/keep/: __init__.py  adapter.py  agent.py  agent_dojo_adapter.py  agentdojo_env.py  base.py  capability.py  deriver.py  llm_proposer.py  runner.py  tool_schema.py
tests/: conftest.py  test_adapter.py  test_agent_dojo_adapter.py  test_agentdojo_integration.py  test_impossibility.py  test_llm_proposer.py  test_multistep_lifecycle.py  test_real_scenario.py
